[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart_delivery_env"
version = "0.1.0"
description = "OpenEnv delivery environment"
authors = [{name="Roshini"}]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai"
]

[tool.setuptools]
packages = ["env", "tasks", "baseline"]
