[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "smart_delivery_env"
version = "0.1.0"
description = "Smart Delivery Environment project"
authors = [{ name = "Roshini S", email = "roshinisreddy12@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

# Add all the libraries you actually import in app.py and inference.py
dependencies = [
    "fastapi",
    "uvicorn",
    "numpy",
    "pandas",
    "torch"
]
